S3 1.0 Breaking Change Documentation